# BYTE2BEAT_HACKATHON

./: .dockerignore  .gitattributes  .gitignore  .hfignore  Dockerfile  Hackathon_Showcase.ipynb  LICENSE  README.md  app.py  config.py  config.yaml  evaluate.py  heart_disease_prediction.ipynb  kaka.py  kakaji.txt  predict.py  pyproject.toml  railway.json  requirements.txt  rxconfig.py  setup_project.py  start_hf.sh  start_hf_reflex.sh  start_railway_reflex.sh  the_eye_heart_connection_BYTE2BEAT.ipynb  tmp_check.txt  train.py
api/: gradio_app.py  main.py  schemas.py
api/static/: index.html
artifacts/: README.md  best.pt  metadata_stats.json  thresholds.json
assets/: frontend.css
configs/: api.yaml  api_railway.yaml  api_space.yaml  cv_proxy.yaml  data.yaml  eval.yaml  inference.yaml  inference_railway.yaml  model.yaml  model_resnet50.yaml  model_vgg19.yaml  train.yaml  train_kaggle.yaml
datasets/: build_patient_df.py  data_module.py  data_quality.py  fundus_multimodal_dataset.py  transforms.py
evaluation/: metrics.py  run.py
eye_heart_connection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
inference/: predict.py  predictor.py
models/: image_encoder.py  multimodal_model.py
notebooks/: hackathon_showcase.ipynb  kaggle_train_eval.ipynb
reflex_app/: reflex_app.py
tests/: conftest.py  test_api.py  test_data_prep.py  test_dataset.py  test_model.py  test_predictor.py
training/: train.py  train_resnet50.py  train_vgg19.py  trainer.py
utils/: config.py  constants.py  device.py  io.py  logging.py
