[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eye-heart-connection"
version = "0.1.0"
description = "Multimodal retinal fundus and metadata modeling for cardiovascular risk proxies."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "albumentations>=1.4.0",
  "opencv-python>=4.9.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.4.0",
  "PyYAML>=6.0.1",
  "tensorboard>=2.16.0",
  "fastapi>=0.110.0",
  "gradio>=5.0.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "python-multipart>=0.0.9",
  "Pillow>=10.2.0",
  "matplotlib>=3.8.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["api*", "datasets*", "evaluation*", "inference*", "models*", "training*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
